Fix: Pojawiał się overflow x przez width 100vw nałożony na footer. Zmienieono go na width inherit i footer nie powoduje już niepotrzbengo rozszerzania się strony.

--- a/quizme/src/style.css
+++ b/quizme/src/style.css
@@ -41,7 +41,6 @@ a {
     position: relative;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     background-color: rgb(var(--main-bg));
-    overflow-x: hidden;
 }
 
 .page {
