--- a/quizme/src/styles/layout.css
+++ b/quizme/src/styles/layout.css
@@ -6,7 +6,6 @@
 }
 
 .nav--container {
-    width: 100vw;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -14,6 +13,8 @@
     padding: 1.5rem 20%;
     transition: box-shadow .3s ease-in-out;
     transition: padding .3s ease-in-out;
+    width: 100vw;
+
 }
 
 .nav--scrolled {
@@ -124,9 +125,7 @@ footer li:hover::after {
 footer {
     background-color: rgb(var(--secondary-color));
     padding: 1.3rem 0;
-    bottom: 0;
-    width: 100vw;
-    z-index: 2;
+    width: inherit;
 }
 
 ul {
